2000-02-24  Dan Winship  <danw@helixcode.com>

	* camel-transport.h:
	* camel-transport.c: Add an abstract CamelTransport class.

	* providers/sendmail/*: A CamelTransport that uses sendmail
	to deliver mail.

2000-02-24  Dan Winship  <danw@helixcode.com>

	* camel-folder.c: use CamelExceptions for run-time errors, not
	incorrect code. Don't bother validating that an object exists from
	inside one of its methods, since you couldn't have gotten there if
	it didn't. Fix some code style bugs.

	(_init): Rename init_with_store to init and add parent_folder,
	separator, and name arguments.
	(_set_name): Get separator from self, not parent_store now.

	* camel-store.h:
	* camel-store.c: Remove get/set_separator.

	* providers/mbox/: Update for above.

2000-02-23  Dan Winship  <danw@helixcode.com>

	* camel-medium.c (_finalize): Free the data in the headers hash
	table.
	(_add_header): g_strdup the header name and value when adding it.

	* camel-mime-part-utils.c
	(camel_mime_part_construct_headers_from_stream): Free the header
	data after calling camel_medium_add_header, since it will have
	g_strdup()ed it itself.

2000-02-22  NotZed  <NotZed@HelixCode.com>

	* providers/mbox/camel-mbox-search.c: Dont compile by default.

	* providers/mbox/Makefile.am: Fuck off the filter code.

2000-02-22  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel-stream-b64.c (read_decode__static): 
	don't read the char if we reached the length
	of the output buffer. Hours lost on this
	%$!@# bug : 3.5

	* camel-folder.c (camel_folder_get_subfolder): 
	(camel_folder_create): 
	(camel_folder_delete): 
	(camel_folder_delete_messages): 
	(camel_folder_list_subfolders): 
	(camel_folder_expunge): 
	(camel_folder_get_message_by_number): 
	(camel_folder_get_message_count): 
	(camel_folder_append_message): 
	(camel_folder_copy_message_to): 
	(camel_folder_get_summary): 
	(camel_folder_get_message_uid): 
	(camel_folder_get_message_by_uid): 
	(camel_folder_get_uid_list): 