@@ -1,5 +1,7 @@
 2000-02-24  Dan Winship  <danw@helixcode.com>
 
+	* camel-session.c: Add camel_session_get_transport_for_protocol.
+
 	* camel-transport.h:
 	* camel-transport.c: Add an abstract CamelTransport class.
 
